--- a/index.html
+++ b/index.html
@@ -26,5 +26,36 @@
         </div>
       </div>
     </div>
+
+    <div class="container-info-app">
+      <div class="container-info-app__wrapper-app">
+        <div class="title-text">
+          <span class="title-text__title">The App</span>
+          <span class="title-text__text-buy">Why buy it?</span>
+          <span class="title-text__text-photo">
+            <strong>Take photos like a pro.</strong>
+            You should buy this app because lorem ipsum consectetur adipiscing
+            elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+            dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur.
+          </span>
+        </div>
+        <div class="button">
+          <i class="fa fa-download">
+            <span> Download Application</span>
+          </i>
+        </div>
+        <div class="text-available-for">
+          <span>
+            Available for
+            <i class="fa fa-android"></i>
+            <i class="fa fa-apple"></i>
+            <i class="fa fa-windows"></i>
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
