create dialog window

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="container-info-app__wrapper-app">
           <div class="title-text">
             <span class="title-text__title"><b>The App</b> </span>
-            <span class="title-text__text-buy">Why buy it?</span>
+            <span class="title-text__text-buy"><b>Why buy it?</b></span>
             <span class="title-text__text-photo">
               <strong>Take photos like a pro.</strong>
               You should buy this app because lorem ipsum consectetur adipiscing
@@ -118,7 +118,7 @@
           </div>
           <div class="button">
             <i class="fa fa-download">
-              <span> Download Application</span>
+              <span>Download Application</span>
             </i>
           </div>
           <div class="text-available-for">
@@ -136,6 +136,25 @@
     <div class="dialog-container" id="dialog">
       <div class="dialog-content">
         <i class="fa fa-remove" onclick="openDialog()"></i>
+        <span class="dialog-content__title">DOWNLOAD</span>
+        <span class="dialog-content__text"
+          >Download the app in AppStore, Google Play or Microsoft Store.</span
+        >
+        <div class="container-icon">
+          <i class="fa fa-android"></i>
+          <i class="fa fa-apple"></i>
+          <i class="fa fa-windows"></i>
+        </div>
+        <div class="container-input">
+          <input
+            class="container-input__text-email"
+            type="text"
+            placeholder="Enter e-mail"
+          />
+        </div>
+        <div class="container-button">
+          <div class="container-button__button">Fake Download</div>
+        </div>
       </div>
     </div>
 
