--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
             </span>
           </div>
           <div class="button">
-            <i class="fa fa-download">
-              <span>Download Application</span>
-            </i>
+            <i class="fa fa-download"> </i>
+            <span>Download Application</span>
           </div>
           <div class="text-available-for">
             <span>
@@ -129,6 +128,9 @@
               <i class="fa fa-windows"></i>
             </span>
           </div>
+        </div>
+        <div class="container-info-app__image">
+          <img src="https://www.w3schools.com/w3images/img_app.jpg" alt="" />
         </div>
       </div>
     </div>
