finih criating features

--- a/index.html
+++ b/index.html
@@ -160,6 +160,97 @@
       </div>
     </div>
 
+    <div class="container-clarity">
+      <div class="container-clarity__wrapper-clarity">
+        <div class="wrapper-photo">
+          <img src="https://www.w3schools.com/w3images/app5.jpg" alt="" />
+        </div>
+        <div class="wrapper-info">
+          <span class="wrapper-info__title"><b>Clarity</b></span>
+          <span class="wrapper-info__text"><b>Pixels, who?</b></span>
+          <span class="wrapper-info__text-sharp">
+            <span class="wrapper-info__text-revolution"
+              >A revolution in resolution.</span
+            >
+            Sharp and clear photos with the world's best photo engine,
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-icon">
+      <span class="container-icon__title"><b>Features</b></span>
+      <span class="container-icon__text">This app is just so lorem ipsum.</span>
+      <div class="block-first">
+        <div class="block-first__icon">
+          <i class="fa fa-bolt orange-color"></i>
+          <span>Fast</span>
+        </div>
+        <div class="block-first__icon">
+          <i class="fa fa-heart red-color"></i>
+          <span>Loved</span>
+        </div>
+        <div class="block-first__icon">
+          <i class="fa fa-camera light-green-color"></i>
+          <span>Clarity</span>
+        </div>
+        <div class="block-first__icon">
+          <i class="fa fa-battery-full green-color"></i>
+          <span>Power</span>
+        </div>
+      </div>
+      <div class="block-first">
+        <div class="block-first__icon">
+          <i class="fa fa-diamond white-color"></i>
+          <span>Sharp</span>
+        </div>
+        <div class="block-first__icon">
+          <i class="fa fa-cloud blue-color"></i>
+          <span>Cloud</span>
+        </div>
+        <div class="block-first__icon">
+          <i class="fa fa-globe yellow-color"></i>
+          <span>Global</span>
+        </div>
+        <div class="block-first__icon">
+          <i class="fa fa-hdd-o light-blue"></i>
+          <span>Storage</span>
+        </div>
+      </div>
+      <div class="block-first">
+        <div class="block-first__icon">
+          <i class="fa fa-user beige-color"></i>
+          <span>Safe</span>
+        </div>
+        <div class="block-first__icon">
+          <i class="fa fa-shield orange-color"></i>
+          <span>Stabile</span>
+        </div>
+        <div class="block-first__icon">
+          <i class="fa fa-wifi gray-color"></i>
+          <span>Connected</span>
+        </div>
+        <div class="block-first__icon">
+          <i class="fa fa-image pink-color"></i>
+          <span>HD</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-pricing">
+      <div class="container-pricing__title"><b>Pricing</b></div>
+      <div class="container-pricing__text">
+        Choose a pricing plan that fits your needs.
+      </div>
+      <div class="block-basic">
+        <div class=""></div>
+      </div>
+    </div>
+
     <script src="./app.js"></script>
   </body>
 </html>
