create Pricing component

--- a/index.html
+++ b/index.html
@@ -182,9 +182,11 @@
       </div>
     </div>
 
-    <div class="container-icon">
-      <span class="container-icon__title"><b>Features</b></span>
-      <span class="container-icon__text">This app is just so lorem ipsum.</span>
+    <div class="app-container-icon">
+      <span class="app-container-icon__title"><b>Features</b></span>
+      <span class="app-container-icon__text"
+        >This app is just so lorem ipsum.</span
+      >
       <div class="block-first">
         <div class="block-first__icon">
           <i class="fa fa-bolt orange-color"></i>
@@ -246,8 +248,50 @@
       <div class="container-pricing__text">
         Choose a pricing plan that fits your needs.
       </div>
-      <div class="block-basic">
-        <div class=""></div>
+      <div class="pricing-crads-container">
+        <div class="pricing-crad">
+          <div class="pricing-crad__title">
+            Basic
+          </div>
+          <div class="pricing-crad__properties">250 Photos</div>
+          <div class="pricing-crad__properties">10 Features</div>
+          <div class="pricing-crad__properties">No Ads</div>
+          <div class="pricing-crad__properties">Office hours Support</div>
+          <div class="pricing-crad__properties">
+            <div class="pricing-crad__properties__price">$ 25</div>
+          </div>
+          <div class="pricing-crad__button-wrapper">
+            <button
+              class="pricing-crad__button gray-hover"
+              onclick="openDialog()"
+            >
+              <i class="fa fa-download"> </i>
+              <span>Download</span>
+            </button>
+          </div>
+        </div>
+
+        <div class="pricing-crad">
+          <div class="pricing-crad__title">
+            Basic
+          </div>
+          <div class="pricing-crad__properties">250 Photos</div>
+          <div class="pricing-crad__properties">10 Features</div>
+          <div class="pricing-crad__properties">No Ads</div>
+          <div class="pricing-crad__properties">Office hours Support</div>
+          <div class="pricing-crad__properties">
+            <div class="pricing-crad__properties__price">$ 25</div>
+          </div>
+          <div class="pricing-crad__button-wrapper">
+            <button
+              class="pricing-crad__button gray-hover"
+              onclick="openDialog()"
+            >
+              <i class="fa fa-download"> </i>
+              <span>Download</span>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
 
