--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               fugiat nulla pariatur.
             </span>
           </div>
-          <div class="button">
+          <div class="button" onclick="openDialog()">
             <i class="fa fa-download"> </i>
             <span>Download Application</span>
           </div>
@@ -253,10 +253,12 @@
           <div class="pricing-crad__title">
             Basic
           </div>
-          <div class="pricing-crad__properties">250 Photos</div>
-          <div class="pricing-crad__properties">10 Features</div>
-          <div class="pricing-crad__properties">No Ads</div>
-          <div class="pricing-crad__properties">Office hours Support</div>
+          <div class="pricing-crad__properties"><b>250</b> Photos</div>
+          <div class="pricing-crad__properties"><b>10</b> Features</div>
+          <div class="pricing-crad__properties"><b>No</b> Ads</div>
+          <div class="pricing-crad__properties">
+            <b>Office</b> hours Support
+          </div>
           <div class="pricing-crad__properties">
             <div class="pricing-crad__properties__price">$ 25</div>
           </div>
@@ -273,14 +275,14 @@
 
         <div class="pricing-crad">
           <div class="pricing-crad__title">
-            Basic
+            Premium
           </div>
-          <div class="pricing-crad__properties">250 Photos</div>
-          <div class="pricing-crad__properties">10 Features</div>
-          <div class="pricing-crad__properties">No Ads</div>
-          <div class="pricing-crad__properties">Office hours Support</div>
+          <div class="pricing-crad__properties"><b>1000</b> Photos</div>
+          <div class="pricing-crad__properties"><b>50</b> Features</div>
+          <div class="pricing-crad__properties"><b>No</b>Ads</div>
+          <div class="pricing-crad__properties"><b>Endless</b> Supportt</div>
           <div class="pricing-crad__properties">
-            <div class="pricing-crad__properties__price">$ 25</div>
+            <div class="pricing-crad__properties__price">$ 99</div>
           </div>
           <div class="pricing-crad__button-wrapper">
             <button
@@ -293,6 +295,21 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="container-footer">
+      <div class="container-footer__block-icon">
+        <i class="fa fa-facebook-official"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-snapchat"></i>
+        <i class="fa fa-pinterest-p"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-linkedin"></i>
+      </div>
+      <span class="container-footer__tetx">
+        Powered by
+        <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a>
+      </span>
     </div>
 
     <script src="./app.js"></script>
