--- a/index.html
+++ b/index.html
@@ -133,183 +133,183 @@
           <img src="https://www.w3schools.com/w3images/img_app.jpg" alt="" />
         </div>
       </div>
-    </div>
 
-    <div class="dialog-container" id="dialog">
-      <div class="dialog-content">
-        <i class="fa fa-remove" onclick="openDialog()"></i>
-        <span class="dialog-content__title">DOWNLOAD</span>
-        <span class="dialog-content__text"
-          >Download the app in AppStore, Google Play or Microsoft Store.</span
+      <div class="dialog-container" id="dialog">
+        <div class="dialog-content">
+          <i class="fa fa-remove" onclick="openDialog()"></i>
+          <span class="dialog-content__title">DOWNLOAD</span>
+          <span class="dialog-content__text"
+            >Download the app in AppStore, Google Play or Microsoft Store.</span
+          >
+          <div class="container-icon">
+            <i class="fa fa-android"></i>
+            <i class="fa fa-apple"></i>
+            <i class="fa fa-windows"></i>
+          </div>
+          <div class="container-input">
+            <input
+              class="container-input__text-email"
+              type="text"
+              placeholder="Enter e-mail"
+            />
+          </div>
+          <div class="container-button">
+            <div class="container-button__button">Fake Download</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-clarity">
+        <div class="container-clarity__wrapper-clarity">
+          <div class="wrapper-photo">
+            <img src="https://www.w3schools.com/w3images/app5.jpg" alt="" />
+          </div>
+          <div class="wrapper-info">
+            <span class="wrapper-info__title"><b>Clarity</b></span>
+            <span class="wrapper-info__text"><b>Pixels, who?</b></span>
+            <span class="wrapper-info__text-sharp">
+              <span class="wrapper-info__text-revolution"
+                >A revolution in resolution.</span
+              >
+              Sharp and clear photos with the world's best photo engine,
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <div class="app-container-icon">
+        <span class="app-container-icon__title"><b>Features</b></span>
+        <span class="app-container-icon__text"
+          >This app is just so lorem ipsum.</span
         >
-        <div class="container-icon">
-          <i class="fa fa-android"></i>
-          <i class="fa fa-apple"></i>
-          <i class="fa fa-windows"></i>
+        <div class="block-first">
+          <div class="block-first__icon">
+            <i class="fa fa-bolt orange-color"></i>
+            <span>Fast</span>
+          </div>
+          <div class="block-first__icon">
+            <i class="fa fa-heart red-color"></i>
+            <span>Loved</span>
+          </div>
+          <div class="block-first__icon">
+            <i class="fa fa-camera light-green-color"></i>
+            <span>Clarity</span>
+          </div>
+          <div class="block-first__icon">
+            <i class="fa fa-battery-full green-color"></i>
+            <span>Power</span>
+          </div>
         </div>
-        <div class="container-input">
-          <input
-            class="container-input__text-email"
-            type="text"
-            placeholder="Enter e-mail"
-          />
+        <div class="block-first">
+          <div class="block-first__icon">
+            <i class="fa fa-diamond white-color"></i>
+            <span>Sharp</span>
+          </div>
+          <div class="block-first__icon">
+            <i class="fa fa-cloud blue-color"></i>
+            <span>Cloud</span>
+          </div>
+          <div class="block-first__icon">
+            <i class="fa fa-globe yellow-color"></i>
+            <span>Global</span>
+          </div>
+          <div class="block-first__icon">
+            <i class="fa fa-hdd-o light-blue"></i>
+            <span>Storage</span>
+          </div>
         </div>
-        <div class="container-button">
-          <div class="container-button__button">Fake Download</div>
+        <div class="block-first">
+          <div class="block-first__icon">
+            <i class="fa fa-user beige-color"></i>
+            <span>Safe</span>
+          </div>
+          <div class="block-first__icon">
+            <i class="fa fa-shield orange-color"></i>
+            <span>Stabile</span>
+          </div>
+          <div class="block-first__icon">
+            <i class="fa fa-wifi gray-color"></i>
+            <span>Connected</span>
+          </div>
+          <div class="block-first__icon">
+            <i class="fa fa-image pink-color"></i>
+            <span>HD</span>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="container-clarity">
-      <div class="container-clarity__wrapper-clarity">
-        <div class="wrapper-photo">
-          <img src="https://www.w3schools.com/w3images/app5.jpg" alt="" />
+      <div class="container-pricing">
+        <div class="container-pricing__title"><b>Pricing</b></div>
+        <div class="container-pricing__text">
+          Choose a pricing plan that fits your needs.
         </div>
-        <div class="wrapper-info">
-          <span class="wrapper-info__title"><b>Clarity</b></span>
-          <span class="wrapper-info__text"><b>Pixels, who?</b></span>
-          <span class="wrapper-info__text-sharp">
-            <span class="wrapper-info__text-revolution"
-              >A revolution in resolution.</span
-            >
-            Sharp and clear photos with the world's best photo engine,
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          </span>
-        </div>
-      </div>
-    </div>
+        <div class="pricing-crads-container">
+          <div class="pricing-crad">
+            <div class="pricing-crad__title">
+              Basic
+            </div>
+            <div class="pricing-crad__properties"><b>250</b> Photos</div>
+            <div class="pricing-crad__properties"><b>10</b> Features</div>
+            <div class="pricing-crad__properties"><b>No</b> Ads</div>
+            <div class="pricing-crad__properties">
+              <b>Office</b> hours Support
+            </div>
+            <div class="pricing-crad__properties">
+              <div class="pricing-crad__properties__price">$ 25</div>
+            </div>
+            <div class="pricing-crad__button-wrapper">
+              <button
+                class="pricing-crad__button gray-hover"
+                onclick="openDialog()"
+              >
+                <i class="fa fa-download"> </i>
+                <span>Download</span>
+              </button>
+            </div>
+          </div>
 
-    <div class="app-container-icon">
-      <span class="app-container-icon__title"><b>Features</b></span>
-      <span class="app-container-icon__text"
-        >This app is just so lorem ipsum.</span
-      >
-      <div class="block-first">
-        <div class="block-first__icon">
-          <i class="fa fa-bolt orange-color"></i>
-          <span>Fast</span>
-        </div>
-        <div class="block-first__icon">
-          <i class="fa fa-heart red-color"></i>
-          <span>Loved</span>
-        </div>
-        <div class="block-first__icon">
-          <i class="fa fa-camera light-green-color"></i>
-          <span>Clarity</span>
-        </div>
-        <div class="block-first__icon">
-          <i class="fa fa-battery-full green-color"></i>
-          <span>Power</span>
-        </div>
-      </div>
-      <div class="block-first">
-        <div class="block-first__icon">
-          <i class="fa fa-diamond white-color"></i>
-          <span>Sharp</span>
-        </div>
-        <div class="block-first__icon">
-          <i class="fa fa-cloud blue-color"></i>
-          <span>Cloud</span>
-        </div>
-        <div class="block-first__icon">
-          <i class="fa fa-globe yellow-color"></i>
-          <span>Global</span>
-        </div>
-        <div class="block-first__icon">
-          <i class="fa fa-hdd-o light-blue"></i>
-          <span>Storage</span>
+          <div class="pricing-crad">
+            <div class="pricing-crad__title background-red">
+              Premium
+            </div>
+            <div class="pricing-crad__properties"><b>1000</b> Photos</div>
+            <div class="pricing-crad__properties"><b>50</b> Features</div>
+            <div class="pricing-crad__properties"><b>No</b>Ads</div>
+            <div class="pricing-crad__properties"><b>Endless</b> Supportt</div>
+            <div class="pricing-crad__properties">
+              <div class="pricing-crad__properties__price">$ 99</div>
+            </div>
+            <div class="pricing-crad__button-wrapper">
+              <button
+                class="pricing-crad__button gray-hover"
+                onclick="openDialog()"
+              >
+                <i class="fa fa-download"> </i>
+                <span>Download</span>
+              </button>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="block-first">
-        <div class="block-first__icon">
-          <i class="fa fa-user beige-color"></i>
-          <span>Safe</span>
-        </div>
-        <div class="block-first__icon">
-          <i class="fa fa-shield orange-color"></i>
-          <span>Stabile</span>
-        </div>
-        <div class="block-first__icon">
-          <i class="fa fa-wifi gray-color"></i>
-          <span>Connected</span>
-        </div>
-        <div class="block-first__icon">
-          <i class="fa fa-image pink-color"></i>
-          <span>HD</span>
-        </div>
-      </div>
-    </div>
 
-    <div class="container-pricing">
-      <div class="container-pricing__title"><b>Pricing</b></div>
-      <div class="container-pricing__text">
-        Choose a pricing plan that fits your needs.
-      </div>
-      <div class="pricing-crads-container">
-        <div class="pricing-crad">
-          <div class="pricing-crad__title">
-            Basic
-          </div>
-          <div class="pricing-crad__properties"><b>250</b> Photos</div>
-          <div class="pricing-crad__properties"><b>10</b> Features</div>
-          <div class="pricing-crad__properties"><b>No</b> Ads</div>
-          <div class="pricing-crad__properties">
-            <b>Office</b> hours Support
-          </div>
-          <div class="pricing-crad__properties">
-            <div class="pricing-crad__properties__price">$ 25</div>
-          </div>
-          <div class="pricing-crad__button-wrapper">
-            <button
-              class="pricing-crad__button gray-hover"
-              onclick="openDialog()"
-            >
-              <i class="fa fa-download"> </i>
-              <span>Download</span>
-            </button>
-          </div>
+      <div class="container-footer">
+        <div class="container-footer__block-icon">
+          <i class="fa fa-facebook-official"></i>
+          <i class="fa fa-instagram"></i>
+          <i class="fa fa-snapchat"></i>
+          <i class="fa fa-pinterest-p"></i>
+          <i class="fa fa-twitter"></i>
+          <i class="fa fa-linkedin"></i>
         </div>
-
-        <div class="pricing-crad">
-          <div class="pricing-crad__title">
-            Premium
-          </div>
-          <div class="pricing-crad__properties"><b>1000</b> Photos</div>
-          <div class="pricing-crad__properties"><b>50</b> Features</div>
-          <div class="pricing-crad__properties"><b>No</b>Ads</div>
-          <div class="pricing-crad__properties"><b>Endless</b> Supportt</div>
-          <div class="pricing-crad__properties">
-            <div class="pricing-crad__properties__price">$ 99</div>
-          </div>
-          <div class="pricing-crad__button-wrapper">
-            <button
-              class="pricing-crad__button gray-hover"
-              onclick="openDialog()"
-            >
-              <i class="fa fa-download"> </i>
-              <span>Download</span>
-            </button>
-          </div>
-        </div>
+        <span class="container-footer__tetx">
+          Powered by
+          <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a>
+        </span>
       </div>
-    </div>
-
-    <div class="container-footer">
-      <div class="container-footer__block-icon">
-        <i class="fa fa-facebook-official"></i>
-        <i class="fa fa-instagram"></i>
-        <i class="fa fa-snapchat"></i>
-        <i class="fa fa-pinterest-p"></i>
-        <i class="fa fa-twitter"></i>
-        <i class="fa fa-linkedin"></i>
-      </div>
-      <span class="container-footer__tetx">
-        Powered by
-        <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a>
-      </span>
     </div>
 
     <script src="./app.js"></script>
